--- a/css/_base.scss
+++ b/css/_base.scss
@@ -3,11 +3,9 @@
     margin: 0;
     box-sizing: border-box;
     font-family: $amatic;   
-
-   
     
 }
-html {
+
+body {
     font-size: 12px;
 }
-
