--- a/css/galeria.scss
+++ b/css/galeria.scss
@@ -1,9 +1,6 @@
 body, html {
-    overflow: hidden; 
-    
-    
+    overflow-x: hidden;       
 } 
-
 
 .parallax-content { 
     height: 100vh;
@@ -11,17 +8,7 @@ body, html {
     overflow-x: hidden; 
     overflow-y: auto; 
     perspective: 0.9px;
-    
-    /* nav {
-        li {
-            a {
-                text-decoration: none;
-                color: black;
-                font-size: 4rem;
-            }
-        }
-    } */
-
+  
     .titulo {
         font-size: 5rem;
         text-align: center;
@@ -29,20 +16,25 @@ body, html {
     }       
 
     .parallax-section {
-        margin: 2vh 20vw;;
+        margin: 2vh 15vw;
 
         .parallax-img {
             position: absolute;
             top: 0vh;
             right: 0;
-            bottom: 0vh;
             left: 0;
             transform: translateZ(-1px) scale(3.5);
             background-size: 100%;
             z-index: -1;
-            margin: auto;
-                      
-        }        
+            margin: auto;                      
+        }
+        
+        .segunda {
+            top: 100vh;
+        }
+        .tercera {
+            top: 200vh;
+        }
     }
 
     .inicio {        
@@ -71,41 +63,41 @@ body, html {
 
     .grid-container-pij {
         display: grid;
-        grid-template-rows: repeat(5, 10vw);
-        grid-template-columns: repeat(5,10vw);
+        grid-template-rows: repeat(6, 12vw);
+        grid-template-columns: repeat(5,12vw);
         grid-gap: 2.1vw;
         margin-right: auto;                  
         
         img {
-            width: 10vw;
-            height: 10vw;
+            width: 12vw;
+            height: 12vw;
         }
     }
     
     .grid-container-can {
         display: grid;
-        grid-template-rows: repeat(3, 10vw);
-        grid-template-columns: repeat(5,10vw);
+        grid-template-rows: repeat(4, 12vw);
+        grid-template-columns: repeat(5,12vw);
         grid-gap: 2.1vw;
         margin-right: auto;                  
         
         img {
-            width: 10vw;
-            height: 10vw;
+            width: 12vw;
+            height: 12vw;
         }
     } 
 
     .grid-container-pet {
         display: grid;
-        grid-template-rows: repeat(4, 10vw);
-        grid-template-columns: repeat(5,10vw);
+        grid-template-rows: repeat(7, 12vw);
+        grid-template-columns: repeat(5,12vw);
         grid-gap: 2.1vw;
         margin-right: auto;
         margin-bottom: 15vh;                  
         
         img {
-            width: 10vw;
-            height: 10vw;
+            width: 12vw;
+            height: 12vw;
         }
     }
 
@@ -129,11 +121,19 @@ body, html {
     .grid-item52, .grid-item53, .grid-item53,
     .grid-item54, .grid-item55, .grid-item56,
     .grid-item57, .grid-item58, .grid-item59,
-    .grid-item60 {
+    .grid-item60, .grid-item61, .grid-item62,
+    .grid-item63, .grid-item64, .grid-item65,
+    .grid-item66, .grid-item67, .grid-item68,
+    .grid-item69, .grid-item70, .grid-item71,
+    .grid-item72, .grid-item73, .grid-item74,
+    .grid-item75, .grid-item76, .grid-item77,
+    .grid-item78, .grid-item79, .grid-item80,
+    .grid-item81, .grid-item82, .grid-item83,
+    .grid-item84, .grid-item85 {
         box-shadow:2px 2px 20px;
         transition: all 0.5s;
         background-size: cover;
-        background-position: center;
+        background-position: center;        
 
         &:hover {
             transform: scale(2.5);
@@ -258,8 +258,8 @@ body, html {
         background-image: url('../img/Candies/Candies13.png');
     }
     .grid-item40 {
-        background-image: url('../img/Candies/c1.jpeg');    }
-
+        background-image: url('../img/Candies/c1.jpeg');    
+    }
     .grid-item41 {
         background-image: url('../img/Pets/P1.jpeg');
     }
@@ -319,13 +319,222 @@ body, html {
     }
     .grid-item60 {
         background-image: url('../img/Pets/pets9.png');
+    }    
+    .grid-item61 {
+        background-image: url('../img/Pijamadas/z1.jpeg');
+    }   
+    .grid-item62 {
+        background-image: url('../img/Pijamadas/z2.jpeg');
+    }  
+    .grid-item63 {
+        background-image: url('../img/Pijamadas/z3.jpeg');
+    } 
+    .grid-item64 {
+        background-image: url('../img/Pijamadas/z4.jpeg');
+    }   
+    .grid-item65 {
+        background-image: url('../img/Pijamadas/z6.jpeg');
+    }  
+    .grid-item66 {
+        background-image: url('../img/Candies/C2.png');
+    }  
+    .grid-item67 {
+        background-image: url('../img/Candies/C8.jpeg');
+    }  
+    .grid-item68 {
+        background-image: url('../img/Candies/z1.jpeg');
+    }  
+    .grid-item69 {
+        background-image: url('../img/Candies/C3.jpeg');
+    }  
+    .grid-item70 {
+        background-image: url('../img/Candies/C11.png');
+    }  
+    .grid-item71 {
+        background-image: url('../img/Pets/z2.jpeg');
+    } 
+    .grid-item72 {
+        background-image: url('../img/Pets/z4.jpeg');
+    } 
+    .grid-item73 {
+        background-image: url('../img/Pets/z6.jpeg');
+    } 
+    .grid-item74 {
+        background-image: url('../img/Pets/z7.jpeg');
+    } 
+    .grid-item75 {
+        background-image: url('../img/Pets/z9.jpeg');
+    } 
+    .grid-item76 {
+        background-image: url('../img/Pets/z10.jpeg');
+    } 
+    .grid-item77 {
+        background-image: url('../img/Pets/z11.jpeg');
+    } 
+    .grid-item78 {
+        background-image: url('../img/Pets/z12.jpeg');
+    } 
+    .grid-item79 {
+        background-image: url('../img/Pets/z22.jpeg');
+    } 
+    .grid-item80 {
+        background-image: url('../img/Pets/z14.jpeg');
+    } 
+    .grid-item81 {
+        background-image: url('../img/Pets/z15.jpeg');
+    } 
+    .grid-item82 {
+        background-image: url('../img/Pets/z16.jpeg');
+    } 
+    .grid-item83 {
+        background-image: url('../img/Pets/z17.jpeg');
+    } 
+    .grid-item84 {
+        background-image: url('../img/Pets/z18.jpeg');
+    } 
+    .grid-item85 {
+        background-image: url('../img/Pets/z21.jpeg');
+    }   
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        font-size: 3.3rem;
+        font-weight: bold;        
+        
+        .horarios {
+            span {
+                display: none;
+            }
+        }
     }
 
+    .parallax-content {        
+        
+        .titulo {
+            font-size: 5rem;
+            text-align: center;
+            margin: 4vh 0;
+        }  
 
-
-
-
-
-
+        .inicio {
+            font-size: 4rem;
+            width: 20vw;
+        }
     
+        .parallax-section {
+            padding-left: 0vw;
+            margin-left: 14.5vw;
+               
+            .parallax-img {        
+                transform: translateZ(-1px) scale(2);
+                background-size: 100%;                        
+            }        
+
+            .tercera {
+                display: none;
+            }
+        }
+
+        .grid-container-pij {
+            grid-template-rows: repeat(7, 16vw);
+            grid-template-columns: repeat(4,16vw);
+            grid-gap: 2.1vw;           
+                
+            img {
+                width: 16vw;
+                height: 16vw;
+            }
+        }
+        
+        .grid-container-can {
+            grid-template-rows: repeat(4, 16vw);
+            grid-template-columns: repeat(4,16vw);
+            grid-gap: 2.1vw;                        
+            
+            img {
+                width: 16vw;
+                height: 16vw;
+            }
+        } 
+
+        .grid-container-pet {            
+            grid-template-rows: repeat(7, 16vw);
+            grid-template-columns: repeat(4,16vw);
+            grid-gap: 2.1vw;                            
+            
+            img {
+                width: 16vw;
+                height: 16vw;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 460px) {
+    html {
+        font-size: 4px;        
+    }
+
+    header {
+        font-size: 3.8rem;
+        font-weight: bold;
+        justify-content: space-between;
+    }
+
+    .parallax-content {
+        .inicio {
+            font-size: 4rem;
+            width: 25vw;
+        }  
+
+        section .logo {
+
+            width: 30vw;
+            margin: 0vh auto;
+
+            img {
+                width: 30vw;
+            }
+        }
+        
+        .titulo {
+            font-size: 7rem;            
+        } 
+    
+        .grid-item1, .grid-item2, .grid-item3, 
+        .grid-item4, .grid-item5, .grid-item6, 
+        .grid-item7, .grid-item8, .grid-item9,
+        .grid-item10, .grid-item11, .grid-item12,
+        .grid-item13, .grid-item14, .grid-item15,
+        .grid-item16, .grid-item17, .grid-item18,
+        .grid-item19, .grid-item20, .grid-item21,
+        .grid-item22, .grid-item23, .grid-item24,
+        .grid-item25, .grid-item26, .grid-item27,
+        .grid-item28, .grid-item29, .grid-item30,
+        .grid-item31, .grid-item32, .grid-item33,
+        .grid-item34, .grid-item35, .grid-item36,
+        .grid-item37, .grid-item38, .grid-item39,
+        .grid-item40, .grid-item41, .grid-item42,
+        .grid-item43, .grid-item44, .grid-item45,
+        .grid-item46, .grid-item47, .grid-item48,
+        .grid-item49, .grid-item50, .grid-item51,
+        .grid-item52, .grid-item53, .grid-item53,
+        .grid-item54, .grid-item55, .grid-item56,
+        .grid-item57, .grid-item58, .grid-item59,
+        .grid-item60 {
+            box-shadow:2px 2px 5px;
+            transition: all 0.4s;
+            
+            &:hover {
+                transform: scale(3);
+            }
+        }
+
+        .parallax-section {                     
+            .segunda {
+                display: none;
+            }
+        }
+    }
 }
